docs/apache-airflow-providers-google/10.20.0/_sources/_api/tests/system/providers/google/cloud/automl/example_automl_vision_classification/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.automl.example_automl_vision_classification`
=========================================================================================

.. py:module:: tests.system.providers.google.cloud.automl.example_automl_vision_classification

.. autoapi-nested-parse::

   Example Airflow DAG that uses Google AutoML services.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_automl_vision_clss'

   

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: IMAGE_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: IMAGE_GCS_BUCKET_NAME

   

.. py:data:: IMAGE_DATASET

   

.. py:data:: IMAGE_DATA_CONFIG

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

