docs/apache-airflow-providers-google/10.23.0/_sources/_api/tests/system/providers/google/cloud/automl/example_automl_vision_classification/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.automl.example_automl_vision_classification`
=========================================================================================

.. py:module:: tests.system.providers.google.cloud.automl.example_automl_vision_classification

.. autoapi-nested-parse::

   Example Airflow DAG that uses Google AutoML services.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'automl_vision_clss'

   

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: IMAGE_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: RESOURCE_IMPORT_DATA_URI
   :value: 'gs://airflow-system-tests-resources/automl/datasets/vision/img_classification_short.csv'

   

.. py:data:: IMAGE_DATASET

   

.. py:data:: IMAGE_DATA_CONFIG

   

.. py:data:: create_image_dataset

   

.. py:data:: test_run

   

